sprint4/tests/error/12_operator.py
# Our language does not support type casting
#
a: float = 1.0 + 1
